--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-<<<<<<< HEAD
-  "name": "winningprefloppoker",
+  "name": "desmond-carter-football",
   "version": "1.0.0",
-  "description": "Online video course.",
+  "description": "Football website for Desmond Carter.",
   "main": "index.js",
   "dependencies": {
-    "next": "^6.1.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^6.1.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -15,22 +15,6 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
-  },
-=======
-  "name": "desmond-carter-football",
-  "version": "1.0.0",
-  "description": "Football website for Desmond Carter.",
-  "main": "index.js",
-  "dependencies": {
-    "eslint": "^5.7.0",
-    "eslint-plugin-react": "^7.11.1",
-    "next": "^7.0.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -43,7 +27,6 @@
     "Desmond",
     "Carter"
   ],
->>>>>>> ea4c6120fa1e667986d4faf08d288b6100aed52c
   "author": "Jacob Hoke",
   "license": "ISC"
 }
